--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,18 @@
-# Fichiers de configuration sensibles
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Dépendances
-node_modules/
-.pnp
-.pnp.js
-
 # Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-# Build
-dist/
-dist-ssr/
+node_modules
+dist
+dist-ssr
 *.local
 
-# Cache et fichiers temporaires
-.vite
-.cache
-*.tsbuildinfo
-
-# Éditeurs
+# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -38,11 +23,12 @@ dist-ssr/
 *.sln
 *.sw?
 
-# Tests
-coverage/
-.nyc_output/
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Supabase
-.supabase/
-supabase/.branches/
-supabase/.temp/
+.supabase
